--- a/src/app/patients/views/patients-list.component.html
+++ b/src/app/patients/views/patients-list.component.html
@@ -1,5 +1,4 @@
-<div *ngFor="let patient of patients" id="sm-repeater" class="repeater repeater-3 clearfix"
-     [class.selected]="isSelected(patient)">
+<div *ngFor="let patient of patients" id="sm-repeater" class="repeater repeater-3 clearfix">
   <p id="panelheader" class="header header-8">EXAMPLE</p>
   <div id="sm-placeholder" class="panel panel-4"></div>
   <div id="panelheader" class="panel panel-7"></div>
