update routes and views with new template

--- a/src/app/patients/views/patient-details.component.html
+++ b/src/app/patients/views/patient-details.component.html
@@ -1,4 +1,4 @@
-<div id="lg-repeater" class="repeater repeater-2 clearfix">
+<div id="lg-repeater" class="repeater repeater-2 clearfix" style="position: relative">
   <p id="address" class="header header-2">PATIENT ADDRESS</p>
   <p id="panelheader" class="header header-3">EXAMPLE</p>
   <p id="lastname" class="name name-1">Last Name</p>
@@ -13,7 +13,4 @@
   <div id="panelheader" class="panel panel-5"></div>
   <div id="panelbkg" class="panel panel-8"></div>
 </div>
-<p id="headertitle" class="header header-13">Last Name</p>
-<div id="headerbkg" class="appheader appheader-3"></div>
-<div id="background" class="background background-3"></div>
-<p id="appHeaderText" class="applicationheadertext">Patient List Returns</p>
+
