--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top appheader">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand header-15" href="#">ReactJS & AngularJS</a>
+      <span id="header2" class="sub-header header-10">Simple Mobile Test Application</span>
+    </div>
+  </div>
+</nav>
+<div class="container" style="padding-top: 143px;">
+  <router-outlet></router-outlet>
+</div> <!-- /container -->
