--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,25 @@
+<!--
 <button (click)="execute()"  class="_button _button-4">EXECUTE</button>
-<p id="header4" class="header header-9">AUGUST 2014</p>
-<p id="header2" class="header header-10">Simple Mobile Test Application</p>
-<p id="header1" class="header header-11">ReactJS &amp; AngularJS</p>
+
 <p id="header3" class="header header-14">EXAMPLE</p>
 <p id="headertitle" class="header header-15">Application Header</p>
 <div id="headerbkg" class="appheader appheader-4"></div>
 <div id="background" class="background"></div>
+-->
+
+<div class="row">
+  <div class="col-xs-12">
+    EXAMPLE
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <p id="header1" class="header header-11">ReactJS &amp; AngularJS</p>
+    <p id="header4" class="header header-9">AUGUST 2014</p>
+  </div>
+</div>
+<footer class="footer">
+  <div class="container">
+    <button type="button"  (click)="execute()" class="btn btn-warning _button _button-4">EXECUTE</button>
+  </div>
+</footer>
