--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -39,7 +39,6 @@ html {
 }
 
 .header-10 {
-  z-index: 5;
   font-size: 1.143em;
   color: rgb(242, 153, 74);
   position: relative;
@@ -47,6 +46,11 @@ html {
   float: left;
   margin-top: -12px;
   padding-left: 15px;
+}
+
+.header-9 {
+  font-size: 0.714em;
+  color: rgb(151, 151, 151);
 }
 
 .navbar-brand {
