--- a/src/app/patients/views/patients-list.component.html
+++ b/src/app/patients/views/patients-list.component.html
@@ -1,15 +1,17 @@
-<!--
-<div *ngFor="let patient of patients" id="sm-repeater" class="repeater repeater-3 clearfix">
-  <p id="panelheader" class="header header-8">EXAMPLE</p>
-  <div id="sm-placeholder" class="panel panel-4"></div>
-  <div id="panelheader" class="panel panel-7"></div>
-  <div id="panelbkg" class="panel panel-9"></div>
-  <p id="lastname" class="name name-3">{{patient.lname}}</p>
-  <p id="firstname" class="name name-4">{{patient.fname}}</p>
-  <button (click)="onPatient(patient)" id="edit" class="_button _button-5">DETAILS</button>
-</div>
--->
-<div *ngFor="let patient of patients" class="panel panel-primary">
-  <div class="panel-heading"><h3 class="panel-title">Panel title</h3></div>
-  <div class="panel-body"> Panel content</div>
+<div *ngFor="let patient of patients; let i=index" class="panel panel-primary repeater-3">
+  <div class="panel-heading"><h3 class="panel-title">Example</h3></div>
+  <div class="panel-body">
+    <div class="media">
+      <div class="media-left"><a href="#"> <img alt="64x64" class="media-object" data-src="holder.js/64x64"
+                                                [src]="patient.imageUrl"
+                                                data-holder-rendered="true" style="width: 64px; height: 64px;"> </a>
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading">{{patient.lname}}</h4>
+        {{patient.fname}}
+        <button (click)="onPatient(patient)" type="button" class="btn btn-default btn-sm _button-5">DETAILS</button>
+
+      </div>
+    </div>
+  </div>
 </div>
