--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -67,3 +67,29 @@ html {
   font-size: 1.143em;
   color: rgb(255, 255, 255);
 }
+
+
+.repeater-3 {
+  position: relative;
+  border-radius: 0px;
+  .panel-heading{
+    border-radius: 0px;
+    background-color: rgb(0, 127, 163);
+  }
+
+  ._button-5{
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 0px;
+  }
+
+}
+
+._button-5 {
+  background-color: rgb(222, 222, 222);
+  color: rgb(151, 151, 151);
+  &:hover {
+    background-color: rgb(242, 153, 74);
+  }
+}
