added pathology hash to upload to ghPages

--- a/src/app/patients/views/patients-list.component.html
+++ b/src/app/patients/views/patients-list.component.html
@@ -2,7 +2,7 @@
   <div class="panel-heading"><h3 class="panel-title">Example</h3></div>
   <div class="panel-body">
     <div class="media">
-      <div class="media-left"><a href="#"> <img alt="64x64" class="media-object" data-src="holder.js/64x64"
+      <div class="media-left"><a href="#"> <img alt="64x64" class="media-object"
                                                 [src]="patient.imageUrl"
                                                 data-holder-rendered="true" style="width: 64px; height: 64px;"> </a>
       </div>
