update to return type error

--- a/src/app/patients/views/patients-list.component.html
+++ b/src/app/patients/views/patients-list.component.html
@@ -7,8 +7,8 @@
                                                 data-holder-rendered="true" style="width: 64px; height: 64px;"> </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading">{{patient.lname}}</h4>
-        {{patient.fname}}
+        <h4 class="media-heading">{{patient.lastName}}</h4>
+        {{patient.firstName}}
         <button (click)="onPatient(patient)" type="button" class="btn btn-default btn-sm _button-5">DETAILS</button>
 
       </div>
