--- a/src/app/patients/views/patient-details.component.html
+++ b/src/app/patients/views/patient-details.component.html
@@ -1,33 +1,5 @@
-<div class="panel panel-primary repeater-3">
-  <div class="panel-heading"><h3 class="panel-title">Patient Information</h3></div>
-  <div class="panel-body">
-    <div class="media">
-      <div class="col-xs-4" style="padding: 0">
-        <a href="#">
-          <img class="media-object"
-               [src]="patient.imageUrl"
-               data-holder-rendered="true"
-               style="width: 100%; height: auto;"></a>
-      </div>
-      <div class="col-xs-8">
-        <div class="media-body">
-          <h4 class="media-heading">{{patient.lastName}},{{patient.firstName}} </h4>
-          <dl>
-            <dt>Address</dt>
-            <dd>{{patient.addressLine1}},<br>
-              {{patient.city}},{{patient.state}},{{patient.zip}}
-            </dd>
-            <dt>Contact Information</dt>
-            <dd>{{patient.phone}}</dd>
-            <dd>{{patient.email}}</dd>
-          </dl>
-        </div>
-      </div>
-    </div>
-    <button type="button" class="btn btn-default btn-sm _button-5">EDIT</button>
-  </div>
-</div>
-
+<patient-information
+  [patientInfo]="patient"></patient-information>
 
 <div class="panel panel-primary repeater-3">
   <div class="panel-heading"><h3 class="panel-title">Physician Information</h3></div>
