bug fix reference to inputs

--- a/src/app/patients/views/patient-information.html
+++ b/src/app/patients/views/patient-information.html
@@ -36,7 +36,7 @@
     </div>
     <div *ngIf="options.allowEdit">
       <button *ngIf="!edit" (click)="onEdit()" type="button" class="btn btn-default btn-sm _button-5">EDIT</button>
-      <button *ngIf="edit" (click)="onSubmit(patientInfo)" type="button" class="btn btn-default btn-sm _button-5">SAVE
+      <button *ngIf="edit" (click)="onSubmit()" type="button" class="btn btn-default btn-sm _button-5">SAVE
       </button>
 
     </div>
