--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-default navbar-fixed-top appheader">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand header-15" href="#">ReactJS & AngularJS</a>
+      <a class="navbar-brand header-15" href="#">AngularJS</a>
       <span id="header2" class="sub-header header-10">Simple Mobile Test Application</span>
     </div>
   </div>
