goal, shrink file size, scripting and images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand header-15" href="#">AngularJS</a>
-      <span id="header2" class="sub-header header-10">Simple Mobile Test Application</span>
+      <span id="header2" class="sub-header header-10">{{title}}</span>
     </div>
   </div>
 </nav>
