--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -1,4 +1,6 @@
-@import url("//fonts.googleapis.com/css?family=Roboto:400,500,400");
+//@import url("//fonts.googleapis.com/css?family=Roboto:400,500,400");
+@import "./bootstrap.min.css";
+
 
 body, html {
   background-color: rgb(222, 222, 222)
